--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.github.erd:android-volley:1.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.diogobernardino:williamchart:2.1'
 }
