--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.github.erd:android-volley:1.0.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 }
